--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,14 +33,15 @@
                             <a class="color-type-secondary" href="{{ '/news' | absolute_url }}">News</a>
                         </li>
 
-                        <li class="dropdown" data-proofer-ignore>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Documentation <i class="glyph glyph-chevron-down-2"></i></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="{{ 'docs/' | absolute_url }}">Code documentation</a></li>
-                                <li class="divider"></li>
-                                <li><a href="{{ 'coverage/' | absolute_url }}">Coverage</a></li>
-                            </ul>
-                        </li>
+                        <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Documentation <i class="glyph glyph-chevron-down-2"></i></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="{{ 'reports/javadoc/' | absolute_url }}">Code documentation</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="{{ 'reports/debug/' | absolute_url }}">Coverage</a></li>
+                                    <li><a href="{{ 'reports/androidTests/connected' | absolute_url }}">Test Report</a></li>
+                                </ul>
+                            </li>
                         
                         <li>
                             <a class="color-type-secondary" href="{{ '/wiki' | absolute_url }}">Wiki</a>
